--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # Avoid accidental upload of the Sketch and Figma design files
 #####################################################
 ## Please do not remove lines 5 and 6 - thanks! 🙂 ##
@@ -15,6 +16,8 @@
 .DS_Store
 .prettierignore
 node_modules
-README.md
+READMEe.md
+# README.md
 style-guide.md
 design
+some-edit-in-html-js
